--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,13 @@
 [project]
 name = "pypertext"
-authors = [{ name = "Asif Rahman", email = "asiftr@gmail.com" }]
+authors = [{ name = "Asif Rahman" }]
 description = "Pythonic HTML"
 readme = "README.md"
 dynamic = ["version"]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 keywords = ["HTML", "Web Development"]
 license = { text = "Apache License 2.0" }
 classifiers = [
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -20,7 +19,7 @@ dependencies = ['importlib-metadata; python_version<"3.10"']
 
 # Dev dependencies
 [project.optional-dependencies]
-dev = ["ruff", "ipykernel", "pytest", "nbformat"]
+dev = ["ruff", "ipykernel", "pytest", "pytest-cov", "nbformat"]
 
 # Read the version from the package
 [tool.setuptools.dynamic]
@@ -28,14 +27,6 @@ version = { attr = "pypertext.__version__" }
 
 [tool.setuptools]
 packages = ["pypertext"]
-
-# CLI entry point
-# [project.scripts]
-# pypertext = "pypertext.__main__:cli"
-
-# Include the JSON files in the package var directory
-# [tool.setuptools.package-data]
-# "pypertext" = ["var/**/*"]
 
 # Linting configuration
 [tool.ruff]
