--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,11 @@ authors = [{ name = "Asif Rahman" }]
 description = "Pythonic HTML"
 readme = "README.md"
 dynamic = ["version"]
-requires-python = ">=3.10"
+requires-python = ">=3.9"
 keywords = ["HTML", "Web Development"]
 license = { text = "Apache License 2.0" }
 classifiers = [
+    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -15,7 +16,7 @@ classifiers = [
     "Environment :: Web Environment",
     "Topic :: Internet :: WWW/HTTP",
 ]
-dependencies = ['importlib-metadata; python_version<"3.10"']
+dependencies = ['importlib-metadata; python_version<"3.10"', "typing-extensions"]
 
 # Dev dependencies
 [project.optional-dependencies]
@@ -31,7 +32,7 @@ packages = ["pypertext"]
 # Linting configuration
 [tool.ruff]
 line-length = 120
-target-version = "py311"
+target-version = "py39"
 
 # Use the setuptools build system
 [build-system]
